--- a/requirements.txt
+++ b/requirements.txt
@@ -1,106 +1,6 @@
-absl-py
-asttokens
-astunparse
-attrs
-backcall
-blinker
-cachetools
-certifi
-cffi
-charset-normalizer
-click
-colorama
-comm
-contourpy
-cycler
-debugpy
-decorator
-duckdb
-executing
 Flask
-flatbuffers
-fonttools
-gast
-google-ai-generativelanguage
-google-api-core
-google-auth
-google-auth-oauthlib
-google-generativeai
-google-pasta
-googleapis-common-protos
-grpcio
-grpcio-status
-h5py
-idna
-importlib_metadata
-importlib_resources
-ipykernel
-ipython
-itsdangerous
-jax
-jedi
-Jinja2
-joblib
-jupyter_client
-jupyter_core
-keras
-kiwisolver
-libclang
-Markdown
-MarkupSafe
-matplotlib
-matplotlib-inline
-mediapipe
-ml-dtypes
-nest-asyncio
-numpy
-oauthlib
-opencv-contrib-python
-opencv-python
-opt_einsum
-packaging
-pandas
-parso
-pickleshare
-pillow
-platformdirs
-prompt_toolkit
-proto-plus
-protobuf
-psutil
-pure_eval
-pyasn1
-pyasn1_modules
-pycparser
-Pygments
-pyparsing
-python-dateutil
-python-dotenv
-pytz
-pywin32
-pyzmq
-requests
-requests-oauthlib
-rsa
-scikit-learn
-scipy
-six
-sounddevice
-stack-data
-tensorboard
-tensorboard-data-server
+Pillow
 tensorflow
-tensorflow-estimator
-tensorflow-intel
-tensorflow-io-gcs-filesystem
-termcolor
-threadpoolctl
-tornado
-traitlets
-typing_extensions
-tzdata
-urllib3
-wcwidth
-Werkzeug
-wrapt
-zipp
+requests
+python-dotenv
+google-generativeai
